--- a/trunk/Portal/server-error.html
+++ b/trunk/Portal/server-error.html
@@ -3,8 +3,8 @@
         <title>Server Error</title>
     </head>
     <body>
-        <div style="width:800px;display:table;margin:0px auto 0px auto;">
-            <img src="media/skins/Gold/Robot - Marvin.jpg" style="float:right;margin-left:15px;" />
+        <div style="width:1000px;display:table;margin:0px auto 0px auto;">
+            <img src="media/skins/Gold/Marvin-the-smart-and-sad-robot.png" style="float:right;margin-left:15px;" />
             <h1>Server Error</h1>
             <p>
                 <em>"i feel so depressed i tried to retrieve some document for you and apparently something went wrong i 
